Fix overlap

--- a/tbbt-rt/src/App.css
+++ b/tbbt-rt/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .timeline_activity {
-  outline: black solid 1px;
+  outline: black solid 2px;
   position: absolute;
   display: flex;
   align-items: center;
@@ -33,7 +33,7 @@
 }
 
 .timeline {
-  outline: blue solid 1px;
+  outline: blue solid 3px;
   position: relative;
   left: 50px;
   width: 80%;
